# ImClay

./: .gitignore  CMakeLists.txt  README.md
include/ImClay/: ImClay.h
libs/clay/: clay.h
src/: ImClay.cpp
